tests/type-errors/01-infinite-type.flt
// Infinite type error: 'm = 'n -> 'm
// --- Command: dotnet run --project FunLang -- --emit-type %input 2>&1
// --- ExitCode: 1
// --- Input:
let rec f x = f in f
// --- Output:
TypeError: Infinite type: 'm = 'n -> 'm
